--- a/week02/week02.html
+++ b/week02/week02.html
@@ -2,18 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>WDD 330 Portfolio</title>
+        <title>Week 02</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-       <h1>WDD 330 Portfolio</h1>
-       <h2>Becky Tieman</h2>
-       <hr>
-       <ol>
-           
-       </ol>
-        
-        <script src="js/main.js"></script>
+      <h1>coming soon...</h1>
     </body>
 </html>
