--- a/index.html
+++ b/index.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>WDD 330 Portfolio</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-       <h1>WDD 330 Portfolio</h1>
-       <h2>Becky Tieman</h2>
-       <hr>
-       <ol>
-           
-       </ol>
-        
-        <script src="js/main.js"></script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>WDD 330 Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+    </script>
+    </script>
+    <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+    <div class="bg-light text-center p-4">
+        <h1>WDD 330 Portfolio</h1>
+        <h2 class="display-6">Becky Tieman</h2>
+    </div>
+
+    <hr>
+    <div class="links">
+        <ol>
+
+        </ol>
+    </div>
+
+
+    <script src="js/main.js"></script>
+</body>
+
 </html>
