--- a/week02/week02.html
+++ b/week02/week02.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Week 02</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-      <h1>coming soon...</h1>
-    </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Week 02</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Latest compiled and minified CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+  </script>
+  </script>
+  <link rel="stylesheet" href="week02.css">
+</head>
+
+<body>
+
+  <div class="bg-light text-center p-3">
+    <h1 class="display-4">Week 02 Notes</h1>
+  </div>
+  <section class="notes">
+    <h2>Reading Ch2: Programming Basics</h2>
+    <ul>
+      <li>Using variables with non-primitive data types - const will not be immutable (arrays, object, etc..)</li>
+      <li>Quit using var all the time - both let and const have block scope(their value only exists inside the block they are
+        declared
+        in)</li>
+      <li>Template Literals - pros: use both types of quotes, JS expressions can be inserted into string</li>
+    </ul>
+    <h2>Reading Ch3: Arrays, Logic, and Loops</h2>
+    <ul>
+      <li>Destructuring Arrays gets rid of the temp variable!</li>
+      <li>for-of loops iterate over an array 'cleaner' than for loop (also use for sets/maps)</li>
+    </ul>
+    <h2>Reading Ch4: Functions</h2>
+    <ul>
+      <li>Keep your code DRY(don't repeat yourself)</li>
+      <li>Arrow Functions: => </li>
+      <ul>
+        <li>pros: good for short, one line functions (how big is too big for using arrow functions?)</li>
+        <li>
+          parameters come BEFORE the arrow and the main function body comes AFTER
+        </li>
+        <li>Always anonymous - assign to a variable if you want to refer to them</li>
+        <li> multiple parameters must go in ( )</li>
+        <li>if NO parameters, empty () goes before arrow </li>
+      </ul>
+      <li>Callbacks are just functions passed as an argument to another function</li>
+    </ul>
+  </section>
+
+  <footer class="bg-light text-center p-4">
+    <a class="btn btn-secondary" href="../index.html">Home Portfolio</a>
+  </footer>
+</body>
+
 </html>
