added new team work

--- a/week05/week05.html
+++ b/week05/week05.html
@@ -50,7 +50,8 @@
     <section class="practice-code"><div class="bg-light text-center p-3">
         <h1 class="display-4">Practice Code</h1>
     </div>
-    <div class="links"><a href="teamw05.html">Team Assignment</a></section></div>
+    <div class="links"><a href="teamw05pt2.html">Team Assignment</a></section></div>
+    <div class="links"><a href="teamw05.html">Team Assignment - try MVC</a></section></div>
     
     
     <footer class="bg-light text-center p-4">
