--- a/week09/week09.html
+++ b/week09/week09.html
@@ -24,14 +24,24 @@
         <h1 class="display-4">Week 09 Notes</h1>
     </div>
     <section class="notes">
-        
-
+        <h2>Reading Ch9: The Window Object</h2>
+        <ul>
+            <li>Window object is global object</li>>
+            <li>window.navigator - info for user's browser</li>
+        </ul>   
+        <h2>Reading Ch14: HTML5 APIs</h2>
+        <ul>
+            <li> web storage API - allows key-value pairs to be stored, similar to cookies</li>
+            <li>geolocation API - can access coordinates of user device</li>
+            <li>web worker API - use to perform large tasks in the background</li>
+        </ul>   
+        <h2>Activity for Modern Front-End Workflow</h2>
     </section>
     <section class="practice-code">
         <div class="bg-light text-center p-3">
             <h1 class="display-4">Practice Code</h1>
         </div>
-        <div class="links"><a href="#">Team Assignment</a>
+        <div class="links"><a href="index-START.html">Team Assignment</a>
     </section>
     </div>
 
