media breakpoints added on main pages

--- a/final/my-final.html
+++ b/final/my-final.html
@@ -27,7 +27,7 @@
         </nav>
         <section class="page">
             <div class="hero d-flex align-items-center justify-content-center">
-                <div class="d-flex justify-content-center w-50">
+                <div class="d-flex justify-content-center">
                     <form class="input-group input-group-lg" onsubmit="handler(event)">
                         <input class="form-control" id="search" type="text" placeholder="Search Recipes...">
                         <button class="btn-search btn btn-secondary" type="submit"><i class="fas fa-search"></i></button>
@@ -54,7 +54,7 @@
             <div class="menu-plan d-flex flex-column justify-content-center align-items-center" id="menu">
                 <h2>MEAL PLANNER</h2>
                 <p>Still not sure what to prepare? Try out our suggested meals for you!</p>
-                <div class="meals d-flex flex-wrap">
+                <div class="meals">
 
                 </div>
             </div>
